Sync LeetCode submission - Group Anagrams (java)